--- a/Views/Admin/EditUser.cshtml
+++ b/Views/Admin/EditUser.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row mt-5">
     <div class="d-flex justify-content-center">
-        <div class="card forms_width">
+        <div class="card formBox">
             <div class="card-header">
                 <h5>Edit user</h5>
             </div>
