--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -1,22 +1,33 @@
 ﻿@model UserDto
+@inject IConfiguration _configuration
 @{
     ViewData["Title"] = @Model.Name;
     Layout = "_Layout";
     var urlActionContext = Url.ActionContext;
     var urlQuery = urlActionContext.HttpContext.Request;
     var acionName = urlActionContext.RouteData.Values["action"].ToString().ToLower();
+    var isAuthorized = Model.Id == int.Parse(User.FindFirst(x => x.Type == ClaimTypes.NameIdentifier).Value) || User.IsInRole(UserRoles.Roles[1]);
     var controllerName = urlActionContext.RouteData.Values["controller"].ToString().ToLower();
 }
 
 <div class="row bg-secondary">
     <div class="col-md-2 col-12 p-4 text-center">
-        <label for="formChangeAvatar" style="cursor: pointer; object-fit:cover;">
-            <img class="rounded-circle" src="https://www.wykop.pl/cdn/c3201142/comment_dYwgPq03e90QvvakJ1DK3w0L0Hl536BF.jpg" alt="Avatar Profile" style="width:120px; height:120px;">
-        </label>
-        <form style="display: none;">
-            <input type="file" id="formChangeAvatar"/>
-            <input type="submit" value="Submit">
-        </form>
+        @if (isAuthorized)
+        {
+            <label for="formChangeAvatar" style="cursor: pointer; object-fit:cover;">
+                <img class="rounded-circle" src="https://www.wykop.pl/cdn/c3201142/comment_dYwgPq03e90QvvakJ1DK3w0L0Hl536BF.jpg" alt="Avatar Profile" style="width:120px; height:120px;">
+            </label>
+            <form style="display: none;">
+                <input type="file" id="formChangeAvatar"/>
+                <input type="submit" value="Submit">
+            </form>
+        }
+        else
+        {
+            <div style="object-fit:cover;">
+                <img class="rounded-circle" src="https://www.wykop.pl/cdn/c3201142/comment_dYwgPq03e90QvvakJ1DK3w0L0Hl536BF.jpg" alt="Avatar Profile" style="width:120px; height:120px;">
+            </div>
+        }
     </div>
 </div>
 
@@ -27,12 +38,15 @@
         <div class="col-md-10 col-12 p-0 text-md-end text-center mt-md-0 mt-2">
         <div class="btn-group" role="group">
             <button type="button" class="btn btn-secondary mx-2 btn-sm btn-info"><i class="bi bi-share-fill"></i> Share</button>
-            <button type="button" class="btn btn-secondary mx-2 btn-sm btn-info"><i class="bi bi-pencil-square"></i> Edit</button>
+            @if (isAuthorized)
+            {
+                <button type="button" class="btn btn-secondary mx-2 btn-sm btn-info"><i class="bi bi-pencil-square"></i> Edit</button>
+            }
         </div>
     </div>
 </div>
 
-<div class="row bg-secondary mt-3 p-2" >
+<div class="row bg-secondary mt-3 p-2">
     <div class="col-12 col-md-3 mt-3 mt-md-0 text-center">
         <span><i class="bi bi-file-music-fill"></i> Tracks: @Model.TotalTracks</span>
     </div>
@@ -40,7 +54,7 @@
         <span><i class="bi bi-calendar-week-fill"></i> Joined: @Model.CreatedTime.ToString("d")</span>
     </div>
     <div class="col-12 col-md-3 mt-3 mt-md-0 text-center">
-        <span><i class="bi bi-hdd-rack-fill"></i> @Model.TotalSizeOfTracks MB free of 100 MB</span>
+        <span><i class="bi bi-hdd-rack-fill"></i> @Math.Round(Model.TotalSizeOfTracks,2) MB free of @float.Parse(_configuration["SizeTracksLimit"]) MB</span>
     </div>
     <div class="col-12 col-md-3 mt-3 mt-md-0 text-center">
         <span><i class="bi bi-cloud-plus-fill"></i> Last upload: @Model.LastUpload</span>
@@ -82,7 +96,8 @@
                         {
                             @foreach (var track in Model.Tracks)
                             {
-                                <tr>
+                                    if(track.TrackAccess == TrackAccess.Private && !isAuthorized){continue;}
+                                    <tr>
                                     <td><a style="text-decoration: none;" asp-controller="library" asp-action="track" asp-route-guid="@track.Guid" class="btn btn-link pt-0">@track.Title</a></td>
                                         
                                     <th class="text-warning" scope="row">@track.DateTimeCreate</th>
@@ -98,7 +113,7 @@
                                         <th class="text-info" scope="row"><i class="bi bi-globe"></i> @nameof(TrackAccess.Public)</th>
                                     }
                                     <th class="text-warning" scope="row">@track.Extension</th>
-                                    <th class="text-warning" scope="row">@track.Size MB</th>
+                                    <th class="text-warning" scope="row">@Math.Round(track.Size,2) MB</th>
                                 </tr>
                             }
                         }
