--- a/Views/Account/Edit.cshtml
+++ b/Views/Account/Edit.cshtml
@@ -3,115 +3,25 @@
 @{
     ViewData["Title"] = "Edit";
     Layout = "_layout";
-
-    var isHeaderUploaded = bool.Parse(User.FindFirst(x => x.Type == "IsHeaderUploaded").Value);
-    var isAvatarUploaded = bool.Parse(User.FindFirst(x => x.Type == "IsAvatarUploaded").Value);
-
-    string urlAvatar = string.Empty;
-    string urlHeader = string.Empty;
-
-    if (isAvatarUploaded)
-    {
-        urlAvatar = $"{Context.Request.Scheme}://{Context.Request.Host}{Url.Action("streamavatar","account",new {name=User.FindFirst(x => x.Type == ClaimTypes.Name).Value, type=UserProfileImagesTypes.Avatar})}";
-    }
-    if (isHeaderUploaded)
-    {
-        urlHeader = $"{Context.Request.Scheme}://{Context.Request.Host}{Url.Action("streamavatar","account",new {name=User.FindFirst(x => x.Type == ClaimTypes.Name).Value, type=UserProfileImagesTypes.Header})}";
-    }
-
-    
 }
-
 <div class="row mt-5">
     <div class="d-flex justify-content-center">
-        <div class="card formBox"> 
+        <div class="card formBox">
             <div class="card-header">
                 <h5>Edit</h5>
             </div>
             <div class="card-body">
                 <div class="row text-start">
-
-                    <div class="validation text-danger" style="text-decoration: none !important;" asp-validation-summary="All"></div>
-                    <label class="text-center bg-secondary p-1 mt-0">Change avatar</label>
-                    <form class="mt-2" method="post" asp-controller="account" asp-action="updateimage" asp-route-type="@UserProfileImagesTypes.Avatar" enctype="multipart/form-data">
-                        <div class="form-group mt-1 col-12 text-center">
-                            <label for="avatar-upload" id="imgstoreavatar">
-                                @if (isAvatarUploaded)
-                                {
-                                    <img class="rounded-circle" src="@urlAvatar" alt="Avatar Profile" style="width:120px; height:120px; cursor: pointer;">
-                                }
-                                else
-                                {
-                                    <img class="rounded-circle" src="~/img/default_avatar.jpg" alt="Avatar Profile" style="width:120px; height:120px; cursor: pointer;">
-                                }
-
-                            </label>
-                            <input asp-for="Image" id="avatar-upload" class="form-control" type="file" style="visibility:hidden; width:0; height:0;" accept=".png, .jpg, .jpeg">
-                        </div>
-                        <div class="col-12 text-center">
-                            <div class="btn-group mr-2 mt-3" role="group">
-                                <button type="submit" class="btn btn-success">Upload avatar</button>
-                                <a href="#" class="btn btn-danger" role="button" aria-disabled="true">Remove avatar</a>
-                            </div>
-                        </div>
-                    </form>
-
-                    <label class="text-center bg-secondary p-1 mt-2">Change header</label>
-                    <form class="mt-2" method="post" asp-controller="account" asp-action="updateimage" asp-route-type="@UserProfileImagesTypes.Header" enctype="multipart/form-data">
-                        <div class="form-group mt-1 col-12 text-center">
-                            <label for="header-upload" id="imgstoreheader">
-                                @if (isHeaderUploaded)
-                                {
-                                    <img src="@urlHeader" alt="Avatar Profile" style="width: 100%; height: 100%; aspect-ratio: 6; object-fit: cover; cursor: pointer;">
-                                }
-                                else
-                                {
-                                    <div style="cursor: pointer;">
-                                        Click to select header
-                                    </div>
-                                }
-
-                            </label>
-                            <input asp-for="Image" id="header-upload" class="form-control" type="file" style="visibility:hidden; width:0; height:0;" accept=".png, .jpg, .jpeg">
-                        </div>
-                        <div class="col-12 text-center">
-                            <div class="btn-group mr-2 mt-3" role="group">
-                                <button type="submit" class="btn btn-success">Upload header</button>
-                                <a href="#" class="btn btn-danger" role="button" aria-disabled="true">Remove header</a>
-                            </div>
-                        </div>
-                    </form>
-
+                    <div class="col-12 mt-2">
+                        <i class="bi bi-person-bounding-box"></i>
+                        <a style="text-decoration: none;" asp-controller="account" asp-action="avatar" class="btn btn-link text-start" role="button">Avatar</a>
+                    </div>
+                    <div class="col-12 mt-2">
+                        <i class="bi bi-image-alt"></i>
+                        <a style="text-decoration: none;" asp-controller="account" asp-action="header" class="btn btn-link text-start" role="button">Header</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-@section Scripts{
-    <script>
-        const avatar = document.getElementById("avatar-upload");
-        avatar.addEventListener('change',function(e){
-            var filename = e.target.files[0]; 
-            var fr = new FileReader();
-            fr.onload = function(e2){
-                const storeAvatar = document.getElementById('imgstoreavatar');
-                storeAvatar.innerHTML='<img class="rounded-circle" id="imgstoreavatar" src="'+ e2.target.result +'" alt="Avatar Profile" style="width:120px; height:120px; cursor: pointer;">';
-            };
-            fr.readAsDataURL(filename);
-        });
-
-        const header = document.getElementById("header-upload");
-        header.addEventListener('change',function(e){
-            console.log("test");
-            var filename = e.target.files[0]; 
-            var fr = new FileReader();
-            fr.onload = function(e2){
-                const storeHeader = document.getElementById('imgstoreheader');
-                storeHeader.innerHTML='<img src="'+ e2.target.result +'" alt="Avatar Profile" style="width: 100%; height: 100%; aspect-ratio: 6; object-fit: cover; cursor: pointer;">';
-            };
-            fr.readAsDataURL(filename);
-        });
-
-    </script>
-}
