--- a/Views/Account/Header.cshtml
+++ b/Views/Account/Header.cshtml
@@ -7,10 +7,16 @@
     var isHeaderUploaded = bool.Parse(User.FindFirst(x => x.Type == "IsHeaderUploaded").Value);
 
     string urlHeader = string.Empty;
+    string buttonRemoveHeaderClass = string.Empty;
 
     if (isHeaderUploaded)
     {
         urlHeader = $"{Context.Request.Scheme}://{Context.Request.Host}{Url.Action("streamavatar","account",new {name=User.FindFirst(x => x.Type == ClaimTypes.Name).Value, type=UserProfileImagesTypes.Header})}";
+        buttonRemoveHeaderClass = "btn btn-danger mx-2";
+    }
+    else
+    {
+        buttonRemoveHeaderClass = "btn btn-danger mx-2 disabled";
     }
 }
 <div class="row mt-2">
@@ -41,8 +47,9 @@
                         </div>
                         <div class="col-12 text-center">
                             <div class="btn-group mr-2 mt-3" role="group">
-                                <button type="submit" class="btn btn-success">Upload header</button>
-                                <a href="#" class="btn btn-danger mx-2" role="button" aria-disabled="true">Remove header</a>
+                                <button id="uploadButton" type="submit" class="btn btn-success disabled">Upload header</button>
+                                <a asp-controller="account" asp-action="removeimage" asp-route-type="@UserProfileImagesTypes.Header" class="@buttonRemoveHeaderClass" role="button">Remove header</a>
+                                <a asp-controller="account" asp-action="edit" class="btn btn-warning" role="button">Back</a>
                             </div>
                         </div>
                     </form>
@@ -61,6 +68,8 @@
             var fr = new FileReader();
             fr.onload = function(e2){
                 const storeHeader = document.getElementById('imgstoreheader');
+                const uploadButton = document.getElementById('uploadButton');
+                uploadButton.classList.remove('disabled');
                 storeHeader.innerHTML='<img src="'+ e2.target.result +'" alt="Avatar Profile" style="width: 100%; height: 100%; aspect-ratio: 6; object-fit: cover; cursor: pointer;">';
             };
             fr.readAsDataURL(filename);
