--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,8 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Sign In";
+﻿@model UserLoginDto
+@{
     Layout = "_SimpleLayout";
+    var urlActionContext = Url.ActionContext;
+    var urlQuery = urlActionContext.HttpContext.Request;
+    var returnpage = !string.IsNullOrEmpty(urlQuery.Query["returnpage"].ToString()) ? urlQuery.Query["returnpage"].ToString() : string.Empty;
+    ViewData["Title"] = "Sign In";
+    
 }
-@model UserLoginDto
 
 <div class="row mt-5">
     <div class="d-flex justify-content-center">
@@ -11,7 +15,7 @@
                 <h5>Login in</h5>
             </div>
             <div class="card-body">
-                <form method="post" asp-controller="account" asp-action="login">
+                <form method="post" asp-controller="account" asp-action="login" asp-route-returnpage="@returnpage">
                     <div class="validation text-danger" asp-validation-summary="All"></div>
                     <div class="form-group mt-1">
                         <label asp-for="Name"></label>
