--- a/Views/Shared/_ProfilePartial.cshtml
+++ b/Views/Shared/_ProfilePartial.cshtml
@@ -1,5 +1,23 @@
-﻿<li class="nav-item dropdown">
+﻿@{
+    string urlAvatar = string.Empty;
+    var isAvatarUploaded = bool.Parse(User.FindFirst(x => x.Type == "IsAvatarUploaded").Value);
+    if(isAvatarUploaded)
+    {
+        urlAvatar = $"{Context.Request.Scheme}://{Context.Request.Host}{Url.Action("streamavatar","account",new {name=User.FindFirst(x => x.Type == ClaimTypes.Name).Value, type=UserProfileImagesTypes.Avatar})}";
+    }
+}
+
+
+<li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" style="color:@User.FindFirst(x => x.Type == "Color").Value" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        @if (isAvatarUploaded)
+        {
+            <img src="@urlAvatar" class="rounded-circle" style="display:inline-block; height:25px; width:25px;  margin: auto;" alt="Avatar" loading="lazy" />
+        }
+        else
+        {
+            <img src="~/img/default_avatar.jpg" class="rounded-circle" style="display:inline-block; height:25px; width:25px; margin: auto;" alt="Avatar" loading="lazy" />
+        }
         @User.Identity.Name
     </a>
     <ul class="dropdown-menu dropdownCustom" aria-labelledby="dropdownMenuUserPanel">
